--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,15 @@
 name = "Tufte"
 license = "MIT"
-licenselink = "https://github.com/loikein/hugo-tufte/blob/main/LICENSE.md"
+licenselink = "https://github.com/dhruvasagar/hugo-tufte/blob/main/LICENSE.md"
 description = "A minimalist blog theme using Tufte-css."
-homepage = "https://github.com/loikein/hugo-tufte"
+homepage = "https://github.com/dhruvasagar/hugo-tufte"
 demo = "https://slashformotion.github.io/hugo-tufte/"
 tags = ["blog", "tufte", "minimal", 'light', "personal"]
 features = ["math", "tufte-css", "tufte"]
 min_version = 0.83
 
 authors = [
-  {name = "Shawn O'Hare", homepage = "http://www.shawnohare.com"},
-  {name = "Slashformotion", homepage = "https://github.com/slashformotion"}
+  { name = "Shawn O'Hare", homepage = "http://www.shawnohare.com" },
+  { name = "Slashformotion", homepage = "https://github.com/slashformotion" },
+  { name = "Dhruva Sagar", homepage = "https://github.com/dhruvasagar" },
 ]
